--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,7 @@
 
 		// Uncomment the next line if you will be using a ptrace-based debugger like C++, Go, and Rust.
 		// "--cap-add=SYS_PTRACE", "--security-opt", "seccomp=unconfined"
+		"--cap-drop=all"
 	],
 
 	// Uncomment the next line if you want to publish any ports.
